# data-filepath

./: .gitignore  README.md  data-filepath.cabal
Data/: FilePath.hs
