name:                data-filepath
version:             1.0.0.0
synopsis:            A type safe file path data structure
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Maxwell Swadling
maintainer:          maxwellswadling@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.FilePath
  other-extensions:    GADTs, DataKinds, KindSignatures, StandaloneDeriving, RankNTypes, DeriveDataTypeable, FlexibleInstances, MagicHash
  build-depends:       base >=4.6 && <4.7, split >=0.2 && <0.3, template-haskell >=2.9 && <2.10, ghc-prim >=0.3 && <0.4
  default-language:    Haskell2010
